# devela

./: .clippy.toml  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Changelog.md  DERIVED.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  check.sh  x
crates/base/macros/: Cargo.toml
crates/base/macros/examples/: coalesce.rs  compile.rs  compile_attr.rs  compile_doc.rs
crates/base/macros/src/: Index.md  index.rs
crates/base/macros/src/_doc/: header.html
crates/base/macros/src/bodies/: mod.rs  repeat.rs  shared.rs
crates/base/macros/src/core_bridge/: _doc_location.rs  doclink.rs  mod.rs
crates/base/macros/src/yard/: mod.rs
crates/ffi/: .gitignore  Cargo.toml  README.md  build.sh
crates/ffi/abi/: devela_ffi.abi
crates/ffi/examples/: README.md  run_all.sh
crates/ffi/examples/c_link/: main.c  run.sh
crates/ffi/examples/c_load/: main.c  run.sh
crates/ffi/examples/odin_import/: main.odin  run.sh
crates/ffi/examples/odin_load/: main.odin  run.sh
crates/ffi/include/: devela_ffi.h
crates/ffi/odin/: import.odin  load.odin  shared.odin
crates/ffi/pkg/c/: devela_ffi.h
crates/ffi/pkg/odin/common/: gen_common.odin
crates/ffi/pkg/odin/import/: gen_import.odin
crates/ffi/pkg/odin/load/: gen_load.odin  load.odin
crates/ffi/src/: lib.rs
crates/macros/: Cargo.toml  check.sh
crates/macros/examples/: cif.rs  coalesce.rs  compile.rs  compile_attr.rs  compile_doc.rs
crates/macros/src/: index.rs
crates/macros/src/_doc/: header.html
crates/macros/src/bodies/: compile.rs  derive.rs  enumint.rs  mod.rs  tests.rs
crates/macros/src/bodies/paste/: attr.rs  error.rs  mod.rs  paste.rs  segment.rs  tests_attr.rs  tests_paste.rs  (+1 more)
crates/macros/src/copied/: _doc_location.rs  _doc_vendor.rs  doclink.rs  mod.rs
crates/macros/src/core_bridge/: _doc_location.rs  doclink.rs  mod.rs
crates/macros/src/docs/: enumint.md  macro_apply_examples.rs  macro_derive_examples.rs  macro_derive_with_examples.rs  paste.md
crates/macros/src/util/: _doc_location.rs  doclink.rs  mod.rs  warn.rs
crates/macros/tests/: enumint.rs
crates/sentinel/: Cargo.toml  README.md
crates/sentinel/src/: lib.rs
examples/lang/js_web/: Cargo.toml  README.md  build-web.sh  build.sh  build_web.sh  main.rs
examples/lang/js_web/public_html/: index.html
examples/lang/js_web_worker/: Cargo.toml  README.md  build.sh  main.rs
examples/lang/js_web_worker/public_html/: index.html  worker.js
libs/base/: Cargo.toml
libs/base/docs/: changelog.md
libs/base/src/: _dep.rs  lib.rs
libs/base/src/code/: mod.rs  reexports.rs
libs/base/src/data/: errors.rs  mod.rs
libs/base/src/game/: mod.rs
libs/base/src/lang/: mod.rs
libs/base/src/media/: mod.rs
libs/base/src/num/: error.rs  mod.rs  sign.rs
libs/base/src/phys/: mod.rs
libs/base/src/sys/: mod.rs
libs/base/src/text/: errors.rs  mod.rs
libs/base/src/ui/: mod.rs
libs/base/src/work/: mod.rs
libs/base_alloc/: Cargo.toml
libs/base_alloc/src/: _dep.rs  index.rs  lib.rs
libs/base_alloc/src/data/: mod.rs
libs/base_alloc/src/lang/: mod.rs
libs/base_alloc/src/num/: mod.rs
libs/base_alloc/src/sys/: mod.rs
libs/base_alloc/src/text/: grapheme.rs  mod.rs
libs/base_alloc/src/work/: mod.rs
libs/base_core/: Cargo.toml
libs/base_core/config/: dep_all.rs
libs/base_core/src/: _dep.rs  index.rs  lib.rs
libs/base_core/src/_info/: mod.rs  vendored
libs/base_core/src/code/: _reexport.rs  const_init.rs  default.rs  guard.rs  lut.rs  mod.rs  reexports.rs  site.rs
libs/base_core/src/data/: error.rs  errors.rs  handle.rs  mod.rs
libs/base_core/src/game/: mod.rs
libs/base_core/src/geom/: mod.rs
libs/base_core/src/lang/: mod.rs
libs/base_core/src/media/: mod.rs
libs/base_core/src/num/: _internals.rs  error.rs  mod.rs
libs/base_core/src/phys/: mod.rs
libs/base_core/src/run/: mod.rs
libs/base_core/src/sys/: mod.rs
libs/base_core/src/text/: errors.rs  lut.rs  mod.rs
libs/base_core/src/ui/: mod.rs
libs/base_core/src/work/: mod.rs
libs/base_data/: Cargo.toml
libs/base_data/src/: index.rs  lib.rs
libs/base_macros/: Cargo.toml
libs/base_macros/.cargo/: config.toml
libs/base_macros/examples/: cif.rs  coalesce.rs  compile.rs  compile_attr.rs  compile_doc.rs
libs/base_macros/src/: Index.md  Lib.md  index.rs  lib.rs
libs/base_macros/src/bodies/: mod.rs  repeat.rs  shared.rs
libs/base_macros/src/core_bridge/: _doc_location.rs  doclink.rs  mod.rs
libs/base_num/: Cargo.toml
libs/base_num/src/: _internals.rs  index.rs  lib.rs
libs/base_num/src/float/: _docs.rs  _internals.rs  mod.rs
libs/base_num/src/int/: _docs.rs  mod.rs
libs/base_num/src/num/: _internals.rs  mod.rs
libs/base_num/src/quant/: mod.rs  value.rs
libs/base_std/: Cargo.toml
libs/base_std/src/: index.rs  lib.rs
libs/base_std/src/code/: mod.rs
libs/base_std/src/data/: mod.rs
libs/base_std/src/num/: mod.rs
libs/base_std/src/phys/: mod.rs
libs/base_std/src/sys/: mod.rs
libs/base_std/src/text/: mod.rs
libs/base_std/src/work/: mod.rs
libs/data/: Cargo.toml
libs/data/src/: lib.rs
libs/macros/: .rustfmt.toml  Cargo.toml  Changelog.md  LICENSE-MIT  README.md  check.sh
libs/macros/.github/workflows/: check.yml
libs/macros/DOCS/: CHANGELOG.md
libs/macros/examples/: coalesce.rs  compile.rs  compile_doc.rs  enumint.rs
libs/macros/src/: Lib.md  common.rs  index.rs  lib.rs  tests.rs
libs/macros/src/bodies/: compile.rs  enumint.rs  ident.rs  mod.rs  niche.rs  shared.rs  tests.rs
libs/macros/src/docs/: enumint.md
libs/macros/tests/: enumint.rs
libs/media/: Cargo.toml
libs/media/src/: lib.rs
libs/num/: Cargo.toml
libs/num/src/: lib.rs
src/base/alloc/: Cargo.toml
src/base/alloc/config/: rustdoc-header.html
src/base/alloc/src/: index.rs
src/base/core/: Cargo.toml  LICENSE-APACHE
src/base/core/src/: index.rs
src/base/opt_macros/: Cargo.toml
src/base/opt_macros/config/: rustdoc-header.html
src/base/opt_macros/examples/: enumint.rs
src/base/opt_macros/src/: index.rs
src/base/opt_macros/tests/: enumint.rs
src/base/std/: Cargo.toml
src/base/std/src/: index.rs
(+5554 files in other folders)
