# ==============================================================================
# https://doc.rust-lang.org/cargo/reference/manifest.html
#
## Table of Contents
#
# * [workspace]
# * [package]
# * [lib]
#
# * [features]
#   - Development       (__*)
#   - Environment       (std,alloc,no_std)
#   - Module            (all,code,data,lang,media,num,phys,sys,text,ui,work, …)
#   - Safety            (unsafe,safe,safest)
#   - Capability        (_*)
#     - doc             (_doc*)
#     - data            (_data*, _bit*, _sort*, _tuple*, _value*, …)
#     - num             (_num*, _cmp*, _int_*, _float_*, …)
#     - text            (_text*, _char*, _str_*)
#   - Dependency        (dep_*)
#
# * [dependencies] (required|optional)
#   * [dev-dependencies]
#   * [build-dependencies]
#
# * [patch]
# * [profile.*]
# * [package.metadata.*]
# * [badges]
#
# - lints
#   * [lints.rust]
#   * [lints.rustdoc]
#   * [lints.clippy]
#   * [lints.rust.unexpected_cfgs]
#     - configuration
#       - nightly       (nightly_*)
#     - reflection      (*··)
#
# * [[bench]]
# * [[example]]

[workspace]
resolver = "3"
members = [".", "macros", "examples/lang/js_web_api"]

[package]
name = "devela"
description = "A development layer."
version = "0.23.0-wip" # In sync with DOCS/CHANGELOG.md
rust-version = "1.85.0" # In sync with README.md & .github/workflows/check.yml
edition = "2024"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/devela"
documentation = "https://docs.rs/devela"
license = "MIT OR Apache-2.0"
readme = "DOCS/CRATES_README.md"
include = [
	# configuration:
	"/Cargo.toml", "/config/*",
	# source code:
	"/build/**/*.rs", "/src/**/*.rs",
	# documentation:
	"/build/**/*.md", "/src/**/*.md",
	"/DOCS/NIGHTLY.md", "/DOCS/VENDORED*.md",
	"/LICENSE*",
	# examples in documentation:
	"/examples/code/enumint.rs",
	"/examples/code/enumset.rs",
	"/examples/data/bitfield.rs",
	"/examples/data/id_seq.rs",
	"/examples/num/niche.rs",
	"/examples/work/coro_run.rs",
]
autoexamples = false
categories = ["development-tools", "rust-patterns", "no-std::no-alloc"]
keywords = ["dev", "helper", "library", "std", "extension"]
build = "build/mod.rs"
publish = true

[lib]
# path = "./src/lib.rs"
bench = false


[features] # 261/300 (39 remaining), 134 visible, 127 hidden
# ==============================================================================
# https://doc.rust-lang.org/cargo/reference/features.html

# Features are grouped in the following categories:
# - Development      __*
# - Environment      alloc, [no_]std
# - Module           …
# - Safety           [un]safe_*, …
# - Capability       _*
# - Dependency       dep_*
#
# Sintax:
# - ["name"]: Visible public-facing features.
# - ["_name"]: Hidden extra capability features.
# - ["__name"]: Development & maintenance features.
#
# Notes:
# - Features are in sync with ./build/features.rs & ./src/_doc/features.md.
# - List and count features with `./utils/manifest.sh features`.


#* Development features *#
# ------------------------------------------------------------------------------

__dbg = [] # shows extra debugging information.
__no_test = [] # exclude examples from being tested.

__force_miri_dst = [] # inhibits disabling miri on several modules


#* Environment features *#
# ------------------------------------------------------------------------------

alloc = [ # enables `alloc` functionality
	"allocator-api2?/alloc", "bytemuck?/extern_crate_alloc", "itertools?/use_alloc",
	"jiff?/alloc", "memchr?/alloc", "orion?/alloc", "portable-atomic-util?/alloc",
	"serde?/alloc", "winnow?/alloc",
]
std = [ # disables `no_std` compatibility and enables `std` functionality
	"alloc", "allocator-api2?/std", "atomic?/std",
	"bumpalo?/std", "bytemuck?/extern_crate_std", "fontdue?/std",
	"itertools?/use_std", "jiff?/std", "log?/std",
	"memchr?/std", "orion?/safe_api", "portable-atomic-util?/std",
	"raw-cpuid?/std", "regex-lite?/std",
	"serde?/std", "simdutf8?/std",
	"wide?/std", "winnow?/std",
]
no_std = [ # enables functionality incompatible with or substitute of `std`
]


#* Module features *#
# ------------------------------------------------------------------------------
# They set compile flags named `*··` (two interpuncts), for reflection.
# For example, `num··` will be set if any num submodule feature is enabled.

all = [ # enables all the modules and submodules
	"code", "data", "lang", "media", "num", "phys", "sys", "text", "ui", "work",
]
code = ["error"]
	error = [] # AllError, DataError, NumError, TextError…
data = ["hash"]
	# codec
		hash = [] # HashFnv, HashFx, HashPengy
	# list = []
	# xipher = ["dep_orion"]
lang = ["glsl", "js"]
	# dsl = []
	# ffi = []
		glsl = []
		js = []
		# py = []
	# i18n = []
	# ling = []
media = ["audio", "color", "draw", "font", "image", "midi", "video"]
	audio = ["sdl2?/mixer"]
	draw = ["sdl2?/gfx"] # "sdl3?/gfx"
	color = []
	font = ["sdl2?/ttf"]
	image = ["sdl2?/image"]
	midi = []
	video = []
num = ["alg", "geom", "prim", "rand", "unit"]
	alg  = [] # algebra (linear & symbolic)
	geom = ["linear", "metric", "shape"] # geometry
		linear = []
		metric = []
		shape = []
	prim = ["cast", "join", "split"]
		cast = []  # PrimitiveCast
		join = []  # PrimitiveJoin
		split = [] # PrimitiveSplit
	rand = [] # random number generators
	# symb = []
	unit = [] # unit prefixes
phys = ["time", "wave"]
	# bio
	# chem
	# mech
	time = []
	# unit
	wave = [] # wavelets
sys = ["io", "mem"]
	# arch
		# simd = ["fontdue?/simd"]
		# wasm = [] # ["ring?/wasm32_unknown_unknown_js"]
	# fs
	io = ["tokio?/io-util", "tokio?/io-std"] # no_std_io…
	mem = ["bit"]
		bit = [] # BitSize
	# os
		linux = []
		windows = ["crossterm?/windows", "midir?/winrt"]
text = ["ascii", "fmt", "str"]
	ascii = [] # AsciiChar
	fmt = [] # NumStr
	str = [] # Str, ExtStr, ExtString
ui = ["layout", "desk", "term", "web"]
	layout = []
	# back
	# front
		desk = []
		# mobi = []
		term = []
		web = []
work = [
	"process", "sync", "thread",
	"bytemuck?/zeroable_atomics",
]
	# async = ["flume?/async"]
	process = ["tokio?/process"]
	sync = ["tokio?/sync"]
	thread = ["tokio?/rt", "tokio?/rt-multi-thread"]


#* Safety features *#
# ------------------------------------------------------------------------------
# They are prefixed with either `safe` or `unsafe`.
# Safe features are associated to *modules*, and unsafe features to *purposes*.
#
# Usage:
# 1. enable the desired `unsafe` feature.
# 2. don't enable the `safe` feature for that module.
#
# The `safest` feature forbids unsafe transitively in dependencies
# (except for Rust's `core`, `alloc` and `std`).
#
# In sync with ./build/features.rs::[UN]SAFE[ST] & ./src/lib.rs::safety)

unsafe = [ # [11] enables all `unsafe` (as long as it isn't forbidden for that module)
	"unsafe_array", "unsafe_ffi", "unsafe_hint", "unsafe_layout",
	"unsafe_niche", "unsafe_ptr", "unsafe_slice", "unsafe_str",
	"unsafe_sync", "unsafe_syscall", "unsafe_thread",
] # `unsafe··`
	unsafe_array   = [] # faster array initialization, UninitArray.
	# unsafe_async   = [] #
	unsafe_ffi     = [] # unsafe foreign function calls (WASM, OS, external C)
	unsafe_hint    = [] # unreachable_unchecked, unchecked arithmetic.
	unsafe_layout  = [] # MemPod, DSTs in the stack, ExtAny::downcast*, Mem::*.
	unsafe_niche   = [] # unchecked niche constructors.
	unsafe_ptr     = [] # Pinned, pop methods without Clone, Ptr::*.
	unsafe_slice   = [] # extra slice methods, avoid bound checks.
	unsafe_str     = [] # unchecked utf-8 char and &str conversions.
	unsafe_sync    = [] # SpinLock, Send and Sync impls.
	unsafe_syscall = [] # os syscalls.
	unsafe_thread  = [] # Logging::set_logger_racy, Env::{remove_var, set_var}.

safe = [ # [10] forbids `unsafe` (and overrides unsafe features)
	"safe_code", "safe_data", "safe_lang", "safe_media", "safe_num",
	"safe_phys", "safe_sys", "safe_text", "safe_ui", "safe_work",
] # `safe··`
	safe_code = []
	safe_data = []
	safe_lang = []
	safe_media = [ # [5]
		"safe_audio", "safe_color", "safe_draw", "safe_font", "safe_image"]
		safe_audio = []
		safe_color = []
		safe_draw = []
		safe_font = []
		safe_image = []
	safe_num = []
	safe_phys = ["safe_time"] # [1]
		safe_time = []
	safe_sys = ["safe_io", "safe_mem"] # [2]
		safe_io = []
		safe_mem = []
	safe_text = []
	safe_ui = ["safe_layout"] # [1]
		safe_layout = []
	safe_work = []
		# safe_async

safest = [ # forbids `unsafe` also in dependencies (except for alloc, core, std)
	"safe"
]


#* Capability features *#
# ------------------------------------------------------------------------------
# Most of these features are prefixed with an underscore (_) to be semi-hidden.
# Enabling them enables extra implementations which increases compilation times.
#
# They set automatic compile flags named `_*··`, used for reflection.
# For example, `_stack··` will be set if any _stack* feature is enabled.
# Which is done in ./build/features.rs
#
# TOC
# - default
# - docs
# - code
# - data
# - num
# - text

# default = []
_max = ["_data_all", "_num_all", "_text_all"]
_maxest = ["_max", "_tuple_72", "_unroll_2048"]

#* _docs capabilities *#
# ---------------------
# WAIT [\href does not work in display mode](https://github.com/KaTeX/KaTeX/issues/3571)
# WAIT [support \SI and \si from siunitx](https://github.com/KaTeX/KaTeX/issues/817)
# WAIT [link to downstream crates](https://github.com/rust-lang/rust/issues/74481)
# WAIT [typeless canonical url](https://github.com/rust-lang/rust/issues/55160)
# WAIT [odd canonical path](https://github.com/rust-lang/rust/issues/124608)
# WAIT [doc(canonical)](https://github.com/rust-lang/rfcs/issues/3011)

_docs = [ # the minimum capabilities to document everything
	# modules:
	"all", "linux",
	# data:
	"_bit_u8", "_destaque_u8", "_stack_u8", "_graph_u8", "_tuple", "_unroll", "_value64",
	# num:
	"_cmp_f64", "_cmp_u32", "_cmp_i64",
	"_float_f64", "_int_u32", "_int_i64",
	# text:
	"_str_u8", "_str_nonul", "_char_all",
]
_docsrs_nodep = ["_docs", "std", "unsafe"]   # + std + unsafe
_docsrs       = ["_docsrs_nodep", "dep_all"] # + dependencies

#* code capabilities *#
# ---------------------

# `unroll!` macro and maximum recursion supported
_unroll = [] # recursion 64
_unroll_128 = ["_unroll"]
_unroll_256 = ["_unroll_128"]
_unroll_512 = ["_unroll_256"]
_unroll_1024 = ["_unroll_512"]
_unroll_2048 = ["_unroll_1024"]

#* data capabilities *#
# ---------------------

_data_all = ["_bit_all", "_collections_all", "_tuple", "_sort_all", "_value_all"]

# `Bitwise`, `bitfield`, `enumset`:
_bit_all = [
	"_bit_i8", "_bit_i16", "_bit_i32", "_bit_i64", "_bit_i128", "_bit_isize",
	"_bit_u8", "_bit_u16", "_bit_u32", "_bit_u64", "_bit_u128", "_bit_usize"]
	_bit_i8 = []
	_bit_i16 = []
	_bit_i32 = []
	_bit_i64 = []
	_bit_i128 = []
	_bit_isize = []
	_bit_u8 = []
	_bit_u16 = []
	_bit_u32 = []
	_bit_u64 = []
	_bit_u128 = []
	_bit_usize = []

# `Destaque*`, `Graph*`, `Node*`, `Stack*`, `Tuple`:
_collections_all = [ "_destaque_all", "_graph_all", "_node_all", "_stack_all", "_tuple" ]
	_destaque_all = ["_destaque_u8", "_destaque_u16", "_destaque_u32", "_destaque_usize"]
		_destaque_u8 = []
		_destaque_u16 = []
		_destaque_u32 = []
		_destaque_usize = []
	_graph_all = ["_graph_u8", "_graph_u16", "_graph_u32", "_graph_usize"]
		_graph_u8 = ["_node_u8"]
		_graph_u16 = ["_node_u16"]
		_graph_u32 = ["_node_u32"]
		_graph_usize = ["_node_usize"]
	_node_all = ["_node_u8", "_node_u16", "_node_u32", "_node_usize"]
		_node_u8 = []
		_node_u16 = []
		_node_u32 = []
		_node_usize = []
	_stack_all = ["_stack_u8", "_stack_u16", "_stack_u32", "_stack_usize"]
		_stack_u8 = []
		_stack_u16 = []
		_stack_u32 = []
		_stack_usize = []

# `Sort`:
_sort_all = [
	"_sort_i8", "_sort_i16", "_sort_i32", "_sort_i64", "_sort_i128", "_sort_isize",
	"_sort_u8", "_sort_u16", "_sort_u32", "_sort_u64", "_sort_u128", "_sort_usize",
	"_sort_f32", "_sort_f64"]
	_sort_i8 = []
	_sort_i16 = []
	_sort_i32 = []
	_sort_i64 = []
	_sort_i128 = []
	_sort_isize = []
	_sort_u8 = []
	_sort_u16 = []
	_sort_u32 = []
	_sort_u64 = []
	_sort_u128 = []
	_sort_usize = []
	_sort_f32 = ["_cmp_f32"]
	_sort_f64 = ["_cmp_f64"]

# `Tuple` trait and maximum arity supported (example relative compilation times)
_tuple = [] # arity 12    # time:  3.3s, codegen:  96K  (for >=2nd compilations)
_tuple_24 = ["_tuple"]    # time:  4.0s, codegen: 279K
_tuple_36 = ["_tuple_24"] # time:  4.6s, codegen: 561K
_tuple_48 = ["_tuple_36"] # time:  6.3s, codegen: 942K
_tuple_72 = ["_tuple_48"] # time: 10.3s, codegen: 2.0M

# `DataValue*, DataType*, DataRaw*`:
_value_all = [
	"_value8", "_value16", "_value32", "_value64",
	"_value128", "_value256", "_value512", "_value1024",
	]
	_value8 = []
	_value16 = []
	_value32 = []
	_value64 = []
	_value128 = []
	_value256 = []
	_value512 = []
	_value1024 = []

#* num capabilities *#
# ---------------------

_num_all = ["_cmp_all", "_nums_all"]

# `Compare`:
_cmp_all = [
	"_cmp_i8", "_cmp_i16", "_cmp_i32", "_cmp_i64", "_cmp_i128", "_cmp_isize",
	"_cmp_u8", "_cmp_u16", "_cmp_u32", "_cmp_u64", "_cmp_u128",
	"_cmp_f16", "_cmp_f32", "_cmp_f64", "_cmp_f128"]
	_cmp_i8 = []
	_cmp_i16 = []
	_cmp_i32 = []
	_cmp_i64 = []
	_cmp_i128 = []
	_cmp_isize = []
	_cmp_u8 = []
	_cmp_u16 = []
	_cmp_u32 = []
	_cmp_u64 = []
	_cmp_u128 = []
	_cmp_f16 = ["_float_f16"]
	_cmp_f32 = ["_float_f32"]
	_cmp_f64 = ["_float_f64"]
	_cmp_f128 = ["_float_f128"]

# `[Num]Int`, `[Num]Float`, `[Num]Frac`, `Point`, `Angle`, `Vector`:
_nums_all = ["_float_all", "_int_all"]
	_float_all = ["_float_f16", "_float_f32", "_float_f64", "_float_f128"]
		_float_f16 = []
		_float_f32 = []
		_float_f64 = []
		_float_f128 = []
	_int_all = ["_int_iall", "_int_uall"]
		_int_iall = ["_int_i8", "_int_i16", "_int_i32", "_int_i64", "_int_i128", "_int_isize"]
			_int_i8 = []
			_int_i16 = []
			_int_i32 = []
			_int_i64 = []
			_int_i128 = []
			_int_isize = []
		_int_uall = ["_int_u8", "_int_u16", "_int_u32", "_int_u64", "_int_u128", "_int_usize"]
			_int_u8 = []
			_int_u16 = []
			_int_u32 = []
			_int_u64 = []
			_int_u128 = []
			_int_usize = []

#* text capabilities *#
# ---------------------

_text_all = ["_char_all", "_str_all"]

# char*
_char_all = ["_char7", "_char8", "_char16"]
	_char7 = []
	_char8 = []
	_char16 = []

# StringU*, StringNonul:
_str_all = [
	"_str_u8", "_str_u16", "_str_u32", "_str_usize",
	"_str_nonul"]
	_str_u8 = ["str"]
	_str_u16 = ["str"]
	_str_u32 = ["str"]
	_str_usize = ["str"]
	#
	_str_nonul = []


#* Dependency features *#
# ------------------------------------------------------------------------------
# The names are prefixed with `dep_`, using underscores in place of dashes.
# They are associated to optional dependencies and groups of modules.
# Enabling any of these will set the `dep··` reflection flag.
#
##Links
# - https://doc.rust-lang.org/edition-guide/rust-2024/cargo-remove-implicit-features.html

# In sync with ./config/dep_all.rs & ./src/_dep.rs
dep_all = [ # enables all 44 optional dependencies:
	"dep_allocator_api2", "dep_atomic", "dep_bumpalo", "dep_bytemuck",
	"dep_const_str", "dep_crossterm", "dep_flume", "dep_fontdue", "dep_ffmpeg",
	"dep_gilrs", "dep_hashbrown", "dep_image", "dep_itertools", "dep_jiff",
	"dep_kira", "dep_libm", "dep_log", "dep_memchr", "dep_midir", "dep_miniquad",
	"dep_orion", "dep_portable_atomic", "dep_portable_atomic_util", "dep_pyo3",
	"dep_rand_core", "dep_rayon", "dep_raw_cpuid", "dep_regex_lite",
	"dep_rodio", "dep_safe_arch", "dep_sdl2", "dep_sdl3",
	"dep_serde", "dep_simdutf8", "dep_stringzilla", "dep_sysinfo", "dep_symphonia",
	"dep_toml_edit", "dep_tokio",
	"dep_unicode_segmentation", "dep_unicode_width", "dep_ureq",
	"dep_wide", "dep_winnow",
]

# groups of dependencies, environment and modules
alloc_deps = ["alloc", "dep_bumpalo", "dep_allocator_api2"]
linux_deps = ["linux", "dep_atomic", "dep_bytemuck"]
text_deps  = ["text", "dep_const_str", "dep_memchr", "dep_regex_lite",
	"dep_stringzilla", "dep_unicode_segmentation", "dep_unicode_width"]
work_deps  = ["work", "dep_atomic", "dep_portable_atomic", "dep_rayon", "dep_tokio"]

# individual dependencies features
dep_allocator_api2 = ["dep:allocator-api2", "hashbrown?/allocator-api2",          # sys::mem::alloc
	"bumpalo?/allocator-api2"]
dep_atomic = ["dep:atomic"]                                                       # work::sync
dep_bumpalo = ["dep:bumpalo"]                                                     # sys::mem::alloc
dep_bytemuck = ["dep:bytemuck", "safe_arch?/bytemuck"]                            # ···
dep_const_str = ["dep:const-str"]                                                 # text::str
dep_crossterm = ["dep:crossterm", "std"]                                          # ui::back
dep_ffmpeg = ["dep:ffmpeg-the-third"]                                             # media::video
dep_flume = ["dep:flume"]                                                         # work::sync
dep_fontdue = ["dep:fontdue"]                                                     # media::font
dep_gilrs = ["dep:gilrs"]                                                         # ui::back
dep_hashbrown = ["dep:hashbrown", "alloc", "fontdue?/hashbrown",                  # data::key
	"pyo3?/hashbrown"]
dep_image = ["dep:image"]                                                         # media::image
dep_itertools = ["dep:itertools"]                                                 # data::iter
dep_jiff = ["dep:jiff", "alloc", "pyo3?/jiff-02"]                                 # phys::time
dep_kira = ["dep:kira"]                                                           # sys::sound
dep_libm = ["dep:libm"]                                                           # num::float
dep_log = ["dep:log"]                                                             # sys::log
dep_memchr = ["dep:memchr", "winnow?/simd"]                                       # text:str
dep_midir = ["dep:midir"]                                                         # media::midi
dep_miniquad = ["dep:miniquad", "alloc", "glsl"]                                  # ui::back
dep_orion = ["dep:orion"]                                                         # data::xipher
dep_portable_atomic = ["dep:portable-atomic"]                                     # work::sync
dep_portable_atomic_util = ["dep:portable-atomic-util"]                           # work::sync
dep_pyo3 = ["dep:pyo3", "std"]                                                    # lang::py
dep_rand_core = ["dep:rand_core"]                                                 # num::rand
dep_rayon = ["dep:rayon", "fontdue?/rayon", "image?/rayon",                       # work::thread
	"sysinfo?/multithread"]
dep_raw_cpuid = ["dep:raw-cpuid"]                                                 # sys::arch
dep_regex_lite = ["dep:regex-lite", "std"]                                        # text::parse
dep_rodio = ["dep:rodio"]                                                         # sys::sound
dep_safe_arch = ["dep:safe_arch"]                                                 # sys::arch
dep_sdl2 = ["dep:sdl2"]                                                           # ui::back
dep_sdl3 = ["dep:sdl3"]                                                           # ui::back
dep_serde = ["dep:serde", "allocator-api2?/serde", "bumpalo?/serde",              # data::codec::serde
	"gilrs?/serde-serialize", "kira?/serde", "orion?/serde",
	"portable-atomic?/serde", "pyo3?/serde", "toml_edit?/serde", "wide?/serde"]
dep_simdutf8 = ["dep:simdutf8"]                                                   # text::str
dep_stringzilla = ["dep:stringzilla"]                                             # text::str
dep_symphonia = ["dep:symphonia", "kira?/symphonia", "rodio?/symphonia"]          # sys::sound
dep_sysinfo = ["dep:sysinfo", "std"]                                              # sys::
dep_toml_edit = ["dep:toml_edit"]                                                 # text::parse
dep_tokio = ["dep:tokio"]                                                         # work::future
dep_unicode_segmentation = ["dep:unicode-segmentation"]                           # text::
dep_unicode_width = ["dep:unicode-width"]                                         # text::
dep_ureq = ["dep:ureq"]                                                           # sys::net
dep_wide = ["dep:wide"]                                                           # ...
dep_winnow = ["dep:winnow", "toml_edit?/parse"]                                   # text::parse


[dependencies] # 46 (2 required, 44 optional)
# ==============================================================================
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
#
## notes
# - dependencies are sorted alfabetically, with links and comments.
# - use `./utils/manifest.sh dependencies` to see the numbers.
#
## when adding a new optional dependency
# 1. Update `dep_all` above and ./config/dep_all.rs.
# 2. Add a new entry below and in ./src/_deps.rs.

#* required dependencies *#
[dependencies.devela_macros] # https://crates.io/crates/devela_macros
version  = "0.12.1" # ✓ https://github.com/andamira/devela_macros/blob/main/DOCS/CHANGELOG.md
# path = "./macros" # safe
[dependencies.paste_crate] # https://crates.io/crates/paste
version = "1.0.15" # ✗ https://github.com/dtolnay/paste/commits/master/
package = "paste" # safe, ARCHIVED

#* optional dependencies *#

[dependencies.allocator-api2] # https://crates.io/crates/allocator-api2
version = "0.2.21" # ✗ https://github.com/zakarumych/allocator-api2/commits/main/
optional = true # unsafe
default-features = false # 6 https://docs.rs/crate/allocator-api2/latest/features
features = [] # ["fresh-rust"] WAIT:FIX: https://github.com/zakarumych/allocator-api2/issues/26
# WAIT: [nightly impl for unsize_box](https://github.com/zakarumych/allocator-api2/pull/23)

[dependencies.atomic] # https://crates.io/crates/atomic
version = "0.6.0" # ✗ https://github.com/Amanieu/atomic-rs/commits/master/
optional = true # unsafe
default-features = false # 4 https://docs.rs/crate/atomic/latest/features
features = ["fallback"]

[dependencies.bumpalo] # https://crates.io/crates/bumpalo
version = "3.16.0" # ✓ https://github.com/fitzgen/bumpalo/blob/main/CHANGELOG.md
optional = true # unsafe
default-features = false # 7 https://docs.rs/crate/bumpalo/latest/features
features = ["boxed", "collections"]

[dependencies.bytemuck] # https://crates.io/crates/bytemuck
version = "1.22.0" # ✓ https://github.com/Lokathor/bytemuck/blob/main/changelog.md
optional = true # unsafe
default-features = false # 21 https://docs.rs/crate/bytemuck/latest/features
features = ["alloc_uninit", "align_offset", "min_const_generics", "must_cast",
	"zeroable_maybe_uninit"]

[dependencies.const-str] # https://crates.io/crates/const-str
version = "0.6.2" # ✗ https://github.com/Nugine/const-str/commits/main/
optional = true # unsafe
default-features = false # 8 https://docs.rs/crate/const-str/latest/features

[dependencies.crossterm] # https://crates.io/crates/crossterm
# In sync with src::ui::back::crossterm::service
version = "0.28.1" # ✓ https://github.com/crossterm-rs/crossterm/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 9 https://docs.rs/crate/crossterm/latest/features
features = ["bracketed-paste", "events"]

[dependencies.ffmpeg-the-third] # https://crates.io/crates/ffmpeg-the-third
version = "3.0.1" # ✓ https://github.com/shssoichiro/ffmpeg-the-third/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 65 https://docs.rs/crate/ffmpeg-the-third/latest/features
features = [
	# default:
	"codec", "device", "filter", "format",
	"non-exhaustive-enums", "software-resampling", "software-scaling",
	# "static", # FAILS
]
# INSTALL: clang pkg-config
# libavcodec-dev libavdevice-dev libavfilter-dev libavformat-dev libavutil-dev

[dependencies.flume] # https://crates.io/crates/flume
version = "0.11" # ✓ https://github.com/zesterer/flume/blob/master/CHANGELOG.md
optional = true # safe
default-features = false # 8 https://docs.rs/crate/flume/latest/features
features = [] #
# feature-gated: async,
# other: spin, eventual-fairness, select

[dependencies.fontdue] # https://crates.io/crates/gilrs
version = "0.9.3" # ✓ https://github.com/mooman219/fontdue/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 8 https://docs.rs/crate/fontdue/latest/features
# feature-gated: simd
# WAIT: [update ttf-parser](https://github.com/mooman219/fontdue/issues/159)

[dependencies.gilrs] # https://crates.io/crates/gilrs
version = "0.11" # ✗ https://gitlab.com/gilrs-project/gilrs/-/commits/master?ref_type=HEADS
optional = true # unsafe
default-features = false # 5 https://docs.rs/crate/gilrs/latest/features
features = ["wgi"]
# INSTALL: libudev-dev

[dependencies.hashbrown] # https://crates.io/crates/hashbrown
version = "0.15.1" # ✓ https://github.com/rust-lang/hashbrown/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 14 https://docs.rs/crate/hashbrown/latest/features
features = ["default-hasher", "inline-more"]

[dependencies.image] # https://crates.io/crates/image
version = "0.25.5" # ✓ https://github.com/image-rs/image/blob/main/CHANGES.md
optional = true # unsafe (mostly dependencies)
default-features = false # 23 https://docs.rs/crate/image/latest/features
features = ["jpeg", "png", "pnm"]
# feature-gated: "rayon",
# other: "bmp", "ff", "ico", "gif", "qoi", "dds", "hdr", "exr", "tga", "tiff", "webp"
# heavy: "avif"
# WAIT: [png 0.18](https://github.com/image-rs/image-png/issues/508)

[dependencies.itertools] # https://crates.io/crates/itertools
version = "0.14" # ✓ https://github.com/rust-itertools/itertools/blob/master/CHANGELOG.md
optional = true # safe enough (simple few)
default-features = false # 3 https://docs.rs/crate/itertools/latest/features

[dependencies.jiff] # https://crates.io/crates/jiff
version = "0.2" # ✓ https://github.com/BurntSushi/jiff/blob/master/CHANGELOG.md
optional = true # safe ± (few & checked)
default-features = false # 10 https://docs.rs/crate/jiff/latest/features
# features = [""] # https://docs.rs/jiff/0.1.14/jiff/#crate-features

[dependencies.kira] # https://crates.io/crates/kira
version = "0.10" # ✓ https://github.com/tesselode/kira/releases
optional = true # safe (although unsafe deps?)
default-features = false # 10 https://docs.rs/crate/kira/latest/features
features = ["cpal"] # symphonia, flac, mp3, ogg, wav
# https://docs.rs/kira/latest/kira/#features
# INSTALL: libasound2-dev

[dependencies.libm] # https://crates.io/crates/libm
version = "0.2.11" # ✓ https://github.com/rust-lang/libm/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 3 https://docs.rs/crate/libm/latest/features

[dependencies.log] # https://crates.io/crates/log
version = "0.4.25" # ✓ https://github.com/rust-lang/log/blob/master/CHANGELOG.md
optional = true # safe (optional unsafe)
default-features = false # 25 https://docs.rs/crate/log/latest/features
# features = ["kv"]

[dependencies.memchr] # https://crates.io/crates/memchr
version = "2.7" # ✗ https://github.com/BurntSushi/memchr/commits/master/
optional = true # unsafe
default-features = false # 9 https://docs.rs/crate/memchr/latest/features

[dependencies.midir] # https://crates.io/crates/midir
version = "0.10.1" # ✓ https://github.com/Boddlnagg/midir/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 7 https://docs.rs/crate/midir/latest/features
# INSTALL: libasound2-dev

[dependencies.miniquad] # https://crates.io/crates/miniquad
# In sync with src::ui::back::miniquad::service
version = "0.4.7" # ✗ https://github.com/not-fl3/miniquad/commits/master/
optional = true # unsafe
default-features = false # 1 https://docs.rs/crate/miniquad/latest/features
features = ["log-impl"]
# WAIT: [update conf module to derive more traits](https://github.com/not-fl3/miniquad/pull/523)
# WAIT: [use AtomicPtr in NATIVE_DISPLAY](https://github.com/not-fl3/miniquad/pull/525)

[dependencies.orion] # https://crates.io/crates/orion
version = "0.17" #
optional = true # safe (+some dependencies)
default-features = false # 7 https://docs.rs/crate/orion/latest/features
# features = [] # https://github.com/orion-rs/orion/wiki/Crate-features
# feature-gated: alloc, safe_api, serde

[dependencies.portable-atomic] # https://crates.io/crates/portable-atomic
version = "1.11" # ✓ https://github.com/taiki-e/portable-atomic/blob/main/CHANGELOG.md
optional = true # unsafe
default-features = false # 11 https://docs.rs/crate/portable-atomic/latest/features
# https://docs.rs/portable-atomic/1.11.0/portable_atomic/#optional-features
features = ["fallback", "float"]
# feature-gated: serde
# feature-maybe: require-cas

[dependencies.portable-atomic-util] # https://crates.io/crates/portable-atomic-util
version = "0.2.4" # ✓ https://github.com/taiki-e/portable-atomic/blob/main/portable-atomic-util/CHANGELOG.md
optional = true # unsafe
default-features = false # 3 https://docs.rs/crate/portable-atomic-util/latest/features

[dependencies.pyo3] # https://crates.io/crates/pyo3
version = "0.24.0" # ✓ https://github.com/PyO3/pyo3/blob/main/CHANGELOG.md
optional = true  # unsafe
default-features = false # 37 https://docs.rs/crate/pyo3/latest/features
features = [] # https://docs.rs/pyo3/latest/pyo3/#feature-flags
# https://pyo3.rs/latest/features.html#features-reference
# WAIT [no_std](https://github.com/PyO3/pyo3/issues/3510)
# WAIT [minimal-versions](https://github.com/PyO3/pyo3/issues/4877)

[dependencies.rand_core] # https://crates.io/crates/rand_core
version = "0.9" # ✓ https://github.com/rust-random/rand/blob/master/rand_core/CHANGELOG.md
optional = true # safe
default-features = false # 5 https://docs.rs/crate/rand_core/latest/features
# NOTE: depends on syn, via zerocopy

[dependencies.rayon] # https://crates.io/crates/rayon
version = "1.10" # ✗ https://github.com/rayon-rs/rayon/commits/main/
optional = true # unsafe
default-features = false # 1 https://docs.rs/crate/rayon/latest/features

[dependencies.raw-cpuid] # https://crates.io/crates/raw-cpuid
version = "11.2" # ✓ https://github.com/gz/rust-cpuid/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 9 https://docs.rs/crate/raw-cpuid/latest/features

[dependencies.regex-lite] # https://crates.io/crates/regex-lite
version = "0.1" # ✗ https://github.com/rust-lang/regex/commits/master/regex-lite
optional = true # safe
default-features = false # 2 https://docs.rs/crate/rayon/latest/features
features = ["string"]
# WAIT: [no_std](https://github.com/rust-lang/regex/issues/1122)

[dependencies.rodio] # https://crates.io/crates/rodio
version = "0.20.1" # ✓ https://github.com/RustAudio/rodio/blob/master/CHANGELOG.md
optional = true # unsafe (unsafe dependencies)
default-features = false # 26 https://docs.rs/crate/rodio/latest/features
# features = ["claxon", "flac", "hound", "lewton", "mp3", "vorbis", "wav"] # IMPROVE: feature-gate
# DONE [minimal-versions](https://github.com/diwic/alsa-sys/issues/14) WAIT alsa-rs
# WAIT [new updated release](https://github.com/diwic/alsa-rs/)
# WAIT: [minimal-versions](https://github.com/rust-num/num-rational/issues/133)
# INSTALL: libasound2-dev

[dependencies.safe_arch] # https://crates.io/crates/safe_arch
version = "0.7.4" # ✗ https://github.com/Lokathor/safe_arch/commits/main/
optional = true # unsafe
default-features = false # 2 https://docs.rs/crate/safe_arch/latest/features

[dependencies.sdl2] # https://crates.io/crates/sdl2
version = "0.37.0" # ✓ https://github.com/Rust-SDL2/rust-sdl2/blob/HEAD/changelog.md
optional = true # unsafe
default-features = false # 15 https://docs.rs/crate/sdl2/latest/features
# features = [] # https://crates.io/crates/sdl2#user-content-available-rust-features
# feature-gated: image, gfx, mixer, ttf
# INSTALL: libsdl2-dev libsdl2-gfx-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev

[dependencies.sdl3] # https://crates.io/crates/sdl3
version = "0.14" # ✗ https://github.com/vhspace/sdl3-rs/commits/master/
optional = true # unsafe
default-features = false # 15 https://docs.rs/crate/sdl3/latest/features
features = ["build-from-source"] #
# feature-gated: gfx

[dependencies.serde] # https://crates.io/crates/serde
version = "1.0" # ✗ https://github.com/serde-rs/serde/releases
optional = true # unsafe
default-features = false # 7 https://docs.rs/crate/serde/latest/features
# WAIT [Const generics support](https://github.com/serde-rs/serde/issues/1937)

[dependencies.simdutf8] # https://crates.io/crates/simdutf8
version = "0.1" # ✓ https://github.com/rusticstuff/simdutf8/blob/main/CHANGELOG.md
optional = true # unsafe
default-features = false # 6 https://docs.rs/crate/simdutf8/latest/features
# features = [] # https://github.com/rusticstuff/simdutf8/blob/main/Cargo.toml
# WAIT: [const_methods](https://github.com/rusticstuff/simdutf8/pull/111) text::str::namespace

[dependencies.stringzilla] # https://crates.io/crates/stringzilla
version = "3.12" # ✗ https://github.com/ashvardanian/StringZilla/releases
optional = true  # unsafe
default-features = false # 0 https://docs.rs/crate/stringzilla/latest/features
# WAIT [fix msvc cross-compile](https://github.com/ashvardanian/StringZilla/pull/169)
# WAIT [fix cmake code](https://github.com/ashvardanian/StringZilla/pull/85)

[dependencies.symphonia] # https://crates.io/crates/symphonia
version = "0.5.4" # ✓ https://github.com/pdeljanov/Symphonia/releases
optional = true # safe
default-features = false # 36 https://docs.rs/crate/symphonia/latest/features
features = [] # adpcm, flac, mkv, ogg, pcm, vorbis, wav, symphonia-[bundle|codec|format]*, opt-simd
# IMPROVE: feature-gate

[dependencies.sysinfo] # https://crates.io/crates/sysinfo
version = "0.33" # ✓ https://github.com/GuillaumeGomez/sysinfo/blob/master/CHANGELOG.md
optional = true # unsafe
default-features = false # 16 https://docs.rs/crate/sysinfo/latest/features
features = ["component", "disk", "network", "system", "user"] # IMPROVE: feature-gate

[dependencies.toml_edit] # https://crates.io/crates/toml_edit
version = "0.22" # ✓ https://github.com/toml-rs/toml/blob/main/crates/toml_edit/CHANGELOG.md
optional = true # unsafe
default-features = false # 6 https://docs.rs/crate/toml_edit/latest/features
features = ["display"] #
# feature-gated: parse, serde
# WAIT: [Dotted key ordering](https://github.com/toml-rs/toml/issues/163)

[dependencies.tokio] # https://crates.io/crates/tokio
version = "1.44" # ✓ https://github.com/tokio-rs/tokio/blob/master/tokio/CHANGELOG.md
optional = true # unsafe
default-features = false # 23 https://docs.rs/crate/tokio/latest/features
features =  [] # https://docs.rs/tokio/#feature-flags
# WAIT [no-std version](https://github.com/tokio-rs/tokio/issues/3544)

[dependencies.unicode-segmentation] # https://crates.io/crates/unicode-segmentation
version = "1.12" # ✓ https://github.com/unicode-rs/unicode-segmentation?tab=readme-ov-file#change-log
optional = true # safe
default-features = false # 1 https://docs.rs/crate/unicode-segmentation/latest/features

[dependencies.unicode-width] # https://crates.io/crates/unicode-width
version = "0.2" # ✓ https://github.com/unicode-rs/unicode-width?tab=readme-ov-file#changelog
optional = true # safe
default-features = false # 7 https://docs.rs/crate/unicode-width/latest/features
# features = ["cjk"]

[dependencies.ureq] # https://crates.io/crates/ureq
version = "3.0.7" # ✓ https://github.com/algesten/ureq/blob/main/CHANGELOG.md
optional = true # safe
default-features = false # 12 https://docs.rs/crate/ureq/latest/features
# features = []
# gzip, json, rustls, rustls-no-provider,
# WAIT: [wasm,no_std](https://github.com/algesten/ureq/issues/667)

[dependencies.wide] # https://crates.io/crates/wide
version = "0.7.32" # ✗ https://github.com/Lokathor/wide/commits/main/
optional = true # unsafe
default-features = false # 3 https://docs.rs/crate/wide/latest/features

[dependencies.winnow] # https://crates.io/crates/winnow
version = "0.7" # ✓ https://github.com/winnow-rs/winnow/blob/main/CHANGELOG.md
optional = true # ±safe (very little unsafe)
default-features = false # 7 https://docs.rs/crate/winnow/latest/features


[dev-dependencies]
# Used for benchmarks, examples and tests. They inherit from [dependencies].
# ------------------------------------------------------------------------------

devela = { path = ".", features = ["all"] }


[build-dependencies]
# Used for the build scripts. They do not inherit from [dependencies].
# ------------------------------------------------------------------------------


# patches
# ==============================================================================
# https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#the-patch-section

[patch.crates-io]
devela = { path = './' }


# profiles
# ==============================================================================
# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://doc.rust-lang.org/stable/rustc/codegen-options/
# https://nnethercote.github.io/perf-book/build-configuration.html

# [profile.dev]
# codegen-backend = "cranelift"

# [profile.dev.package."*"]
# codegen-backend = "llvm"
# opt-level = 3

[profile.dev-lto]
inherits = "dev"
lto = "thin" # false, thin, fat, off

[profile.release-lto]
inherits = "release"
lto = "thin"

[profile.wasm]
inherits = "release"
# https://rustwasm.github.io/docs/book/reference/code-size.html
opt-level = "s"      # Optimize for size
lto = true           # Enable link-time optimizations
codegen-units = 1    # Improve optimization at the cost of compile time
panic = "abort"      # Reduce binary size (no unwinding)
strip = true         # Remove debug symbols for smaller binaries


[package.metadata.docs.rs]
# ==============================================================================
# https://docs.rs/about/metadata
# https://github.com/rust-lang/crates-build-env/blob/master/linux/packages.txt
#
# Maximum build limits (https://docs.rs/crate/devela/latest/builds)
# 6.44 GB RAM, 15 minutes, 102.4 kB log, no-network, 10 targets.

no-default-features = true
features = ["_docsrs"]
rustc-args = ["--cfg", "nightly"]
rustdoc-args = [
	"--generate-link-to-definition",
	"--html-in-header", "./config/rustdoc-header.html",
	"-Ctarget-cpu=native", # see ./utils/cargo-native for local docs
	"--cfg", "nightly",
]
default-target = "x86_64-unknown-linux-gnu"

[badges]
# ==============================================================================
maintenance = { status = "experimental" }


# lints
# ==============================================================================
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section

[lints.rust]
# https://doc.rust-lang.org/stable/nightly-rustc/rustc_lint/builtin/index.html#constants
# ------------------------------------------------------------------------------
# WAIT: [lazy_type_alias](https://github.com/rust-lang/rust/issues/112792)
type_alias_bounds = "deny" # detects bounds in type aliases
unsafe_op_in_unsafe_fn = "deny" # unsafe use inside unsafe fn without unsafe block
#
missing_docs = "warn" # missing docs for public items
#
stable_features = "allow" # a feature attribute that has since been made stable
unknown_lints = "allow" # unrecognized lint attributes

[lints.rustdoc]
# https://doc.rust-lang.org/rustdoc/lints.html
# ------------------------------------------------------------------------------

# missing_crate_level_docs = "deny" # no documentation at the crate root (or any binary)
#
# broken_intra_doc_links = "allow" # NOTE: conditionally allowed in lib.rs
redundant_explicit_links = "allow" # (primitive aliases (char) need the explicit reference)

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
# ------------------------------------------------------------------------------
enum_glob_use = "deny" # `use Enum::*`
missing_safety_doc = "deny" # no `# Safety` section in public unsafe fns
#
all = { level = "warn", priority = -1 } # (the default set of clippy lints)
# a selection from pedantic:
bool_to_int_with_if = "warn" # using an if statement to convert a bool to an int
cloned_instead_of_copied = "warn" # usage of cloned() where copied() could be used
default_union_representation = "warn" # union declared without #[repr(C)]
empty_structs_with_brackets = "warn" # structs without fields, with brackets
if_then_some_else_none = "warn" # if-else that could be written using bool::then[_some]
ignored_unit_patterns = "warn" # Checks for usage of _ in patterns of type ()
float_cmp = "warn" # (in-)equality comparisons on floating-point values
float_cmp_const = "warn" # (in-)equality comparisons on const floating-point values
manual_let_else = "warn" # cases where let...else could be used
manual_string_new = "warn" # usage of "" to create a String
map_unwrap_or = "warn" # usage of result|option.map(_).unwrap_or[_else](_)
ptr_cast_constness = "warn" # as casts between raw pointers that change their constness
same_functions_in_if_condition = "warn" # consecutive ifs with the same function call
semicolon_if_nothing_returned = "warn" # expr returns () but it's not followed by ;
single_match_else = "warn" # 2 arms in match where an if let else will usually suffice
trivially_copy_pass_by_ref = "warn" # fns with ref args that could be passed by value
unnested_or_patterns = "warn" # unnested or-patterns, (Some(a)|Some(b) vs Some(a|b))
unreadable_literal = "warn" #  long integral or float does not contain underscores
# NOTE: not compatible with the iif! macro w/o being able to ignore it in an expr:
# WAIT: [stmt_expr_attributes](https://github.com/rust-lang/rust/issues/15701)
# redundant_else = "warn" // else blocks that can be removed without changing semantics
#
empty_docs = "allow" # empty documentation
doc_lazy_continuation = "allow" # markdown lazy paragraph continuations
mixed_attributes_style = "allow" # items with mixed (inner/outer) attributes
module_inception = "allow" # modules with the same name as its parent
too_long_first_doc_paragraph = "allow" # reason: root modules doc_extends!
wrong_self_convention = "allow" # `is_` methods having an owned self

[lints.rust.unexpected_cfgs]
# https://dev-doc.rust-lang.org/nightly/unstable-book/compiler-flags/check-cfg.html
# https://doc.rust-lang.org/rustc/check-cfg.html
# ------------------------------------------------------------------------------
level = "warn"
check-cfg = [ # Allowed configuration flags:
	# Defined if the library is compiled as the primary package (not a dependency).
	'cfg(cargo_primary_package)',
	#
	# Allows excluding tests from being run, more concisely:
	'cfg(__no_test)',
	#
	# Expect more pointer widths.
	'cfg(target_pointer_width, values("8", "128"))',
	#
	# Nightly flags hierarchy (gating unstable functionality):
	# --------------------------------------------------------------------------
	# They are prefixed with `nightly_`.
	# Enabling any of these will set the `nightly··` reflection flag.
	#
	## Links
	# - https://doc.rust-lang.org/unstable-book/library-features.html
	# - https://releases.rs/
	# - ./utils/release_dates.rs
	# - ./DOCS/NIGHTLY.md
	"cfg(nightly)", # [7] (in sync with ./build/features.rs::FLAGS_NIGHTLY & ./src/lib.rs)
		# WAIT: [allocator_api](https://github.com/rust-lang/rust/issues/32838)
		# - https://reloaded-project.github.io/Reloaded-III/Research/Demystifying-Rust-Allocators.html
		# NOTE:dep features: "allocator-api2?/nightly", "bumpalo?/allocator_api", "hashbrown?/nightly"]
		"cfg(nightly_allocator)", # allocator_api
		# WAIT: [autodiff](https://github.com/rust-lang/rust/issues/124509)
		"cfg(nightly_autodiff)", # autodiff
		# WAIT: [bigint_helper_methods](https://github.com/rust-lang/rust/issues/85532)
		"cfg(nightly_bigint)", # bigint_helper_methods
		# WAIT: [coroutines](https://github.com/rust-lang/rust/issues/43122)
		"cfg(nightly_coro)", # coroutines, coroutine_trait, iter_from_coroutine
		# WAIT: [doc_cfg](https://github.com/rust-lang/rust/issues/43781)
		# WAIT: [doc_notable_trait](https://github.com/rust-lang/rust/issues/45040)
		"cfg(nightly_doc)", # not(doc_auto_cfg)
		# WAIT: [f16_and_f128](https://github.com/rust-lang/rust/issues/116909)
		# WAIT: [re-export](https://github.com/rust-lang/rust/issues/116909#issuecomment-2595319840)
		# NOTE: dep features: ["bytemuck?/nightly_float"]
		"cfg(nightly_float)", # f16, f128
		# WAIT: [portable_simd](https://github.com/rust-lang/rust/issues/86656)
		"cfg(nightly_simd)", # portable_simd
		#
		# nightly features that should become stable soon enough.
		"cfg(nightly_stable)", # In sync with ./src/lib.rs and ./DOCS/NIGHTLY.md
			"cfg(nightly_stable_next1)", # 1.86
			"cfg(nightly_stable_next2)", # 1.87
			"cfg(nightly_stable_later)", # 1.??
	#
	# Auto-enabled reflection flags from ./build/features.rs (36)
	# --------------------------------------------------------------------------
	# general: (4)
	"cfg(unsafe··, safe··, nightly··, dep··)",
	# data: (6)
	'cfg(data··)',
	'cfg(_bit··, _destaque··, _stack··)',
	'cfg(_graph··, _node··)',
	# lang: (2)
	'cfg(lang··, ffi··)',
	# media: (1)
	'cfg(media··)',
	# num: (14)
	'cfg(num··, prim··)',
	'cfg(_sort··, _sort_int··, _sort_float··)',
	'cfg(_nums··, _cmp··, _float··, _int··, _int_i··, _int_u··)',
	'cfg(_non_value··, _non_value_i··, _non_value_u··)',
	# phys: (1)
	'cfg(phys··)',
	# sys: (2)
	'cfg(sys··, mem··)',
	# text: (4)
	'cfg(text··)',
	'cfg(_char··, _str··, _str_u··)',
	# ui: (1)
	'cfg(ui··)',
	# work: (1)
	'cfg(work··)',
]


# benches
# ==============================================================================



# examples
# ==============================================================================

# code
[[example]]
name = "cargo_script"
path = "examples/code/cargo_script.rs"
required-features = ["__no_test"]
[[example]]
name = "enumint"
path = "examples/code/enumint.rs"
[[example]]
name = "enumset"
path = "examples/code/enumset.rs"
required-features = ["_bit_u8"]

# data
[[example]]
name = "bitfield"
path = "examples/data/bitfield.rs"
required-features = ["_bit_u8"]
[[example]]
name = "id_pin"
path = "examples/data/id_pin.rs"
required-features = [] # optional: "alloc"
[[example]]
name = "id_seq"
path = "examples/data/id_seq.rs"

# num
[[example]]
name = "niche"
path = "examples/num/niche.rs"

# term
[[example]]
name = "linux_terminal"
path = "examples/term/linux.rs"
required-features = ["linux", "unsafe_syscall"]

# work
[[example]]
name = "coro_manager"
path = "examples/work/coro_manager.rs"
required-features = ["alloc"]

# ==============================================================================
